[package]
name = "rust-torrent-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A full-featured BitTorrent CLI downloader with DHT, seeding, and resume support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-torrent-downloader"
homepage = "https://github.com/yourusername/rust-torrent-downloader"
documentation = "https://docs.rs/rust-torrent-downloader"
readme = "README.md"
keywords = ["bittorrent", "torrent", "downloader", "p2p", "dht"]
categories = ["command-line-utilities", "network-programming", "downloaders"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_json = "1.0"
sha1 = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rand = "0.8"
bytes = "1.5"
url = "2.5"
reqwest = { version = "0.12", features = ["default", "json"], optional = true }
urlencoding = { version = "2.1", optional = true }
async-trait = "0.1"

[lib]
name = "rust_torrent_downloader"
path = "src/lib.rs"

[[bin]]
name = "rust-torrent-downloader"
path = "src/main.rs"

[features]
default = ["download"]
download = ["reqwest"]
gdrive = ["reqwest", "urlencoding"]
